--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -42,7 +42,7 @@
 
                     </li>
                     <li>
-                        <a data-th-href="@{/encheres}"><i class="fa-solid fa-gavel"></i><span class="nav_titre">Mes enchères</span></a>
+                        <a data-th-href="@{/encheres}"><i class="fa-solid fa-gavel"></i><span class="nav_titre">Enchères</span></a>
                     </li>
                     <li>
                         <a data-th-href="@{/logout}"><i class="fa-regular fa-circle-xmark"></i><span class="nav_titre">Déconnexion</span></a>
