--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -6,7 +6,8 @@
 <body>
 <main>
     <div class="card main-card">
-        <h2>Vendre un nouvel article</h2>
+        <h2 data-th-if="${mode == 'creation'}">Vendre un nouvel article</h2>
+        <h2 data-th-if="${mode == 'modif'}" data-th-text="'modification de l\'article ' + ${article.nomArticle}"></h2>
         <form th:action="@{/articles/creer}" th:object="${article}" method="post" enctype="multipart/form-data">
 
             <label for="nomArticle">Article :</label>
@@ -21,12 +22,14 @@
                         data-th-value="${categorie.idCategorie}"
                         data-th-text="${categorie.libelle}"></option>
             </select>
+            <p data-th-if="${mode == 'modif'}">Veuillez sélectionner une catégorie pour votre article même si elle ne change pas</p>
 
             <label for="image">Photo de l'article :</label>
             <input type="file" id="image" name="image" accept="image/*" required>
             <div id="imagePreviewContainer">
                 <img id="imagePreview" src="#" alt="Aperçu de l'image">
             </div>
+            <p data-th-if="${mode == 'modif'}">Veuillez sélectionner une image pour votre article même si elle ne change pas</p>
 
             <label for="miseAPrix">Mise à prix :</label>
             <input type="number" id="miseAPrix" name="miseAPrix" th:field="*{miseAPrix}" min="1" max="10000" value="150" required>
