--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -16,20 +16,16 @@
 
     <!-- page specific (desktop) FINI -->
     <link rel="stylesheet" data-th-href="@{/css/index.css}">
+    <link rel="stylesheet" data-th-href="@{/css/article.css}">
+    <link rel="stylesheet" data-th-href="@{/css/mesEncheres.css}">
+    <link rel="stylesheet" data-th-href="@{/css/modals-auth.css}">
     <!-- page specific (mobile only) FINI -->
     <link rel="stylesheet" data-th-href="@{/css/index_mobile.css}" media="(max-width: 768px)">
-
-    <!-- Autres CSS En cours... -->
-    <link rel="stylesheet" data-th-href="@{/css/article.css}">
-    <link rel="stylesheet" data-th-href="@{/css/article_mobile.css}" media="(max-width: 768px)">
-    <link rel="stylesheet" data-th-href="@{/css/mesEncheres.css}">
     <link rel="stylesheet" data-th-href="@{/css/mesEncheres_mobile.css}" media="(max-width: 768px)">
 
-    <!-- Divers -->
-    <link rel="stylesheet" data-th-href="@{/css/modals-auth.css}">
-    <link rel="stylesheet" data-th-href="@{/css/filtre-index-recherche.css}">
-    <link rel="stylesheet" data-th-href="@{/css/form-filtres-encheres.css}">
-    <link rel="shortcut icon" data-th-href="@{/images/LogoENI.png}" />
+    <!-- Autres CSS En cours... -->
+    <link rel="stylesheet" data-th-href="@{/css/article_mobile.css}" media="(max-width: 768px)">
+    <link rel="stylesheet" data-th-href="@{/css/admin.css}">
 
     <!-- Injection spécifique si besoin -->
     <div data-th-replace="${css} ?: ~{}"></div>
