--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -3,6 +3,9 @@
     <title>Administration</title>
 </head>
 <body>
+<h1>Bienvenue, <span th:text="${utilisateurDTO.pseudo}">Pseudo</span> !</h1>
+<p>Email : <span th:text="${utilisateurDTO.email}">Email</span></p>
+
 <div class="admin-container">
     <div class="row">
         <!-- Première colonne de 2 cartes -->
