--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -144,5 +144,13 @@ nav a:hover {
 .credit{
     padding-top: 10px;
 }
+/* ADMIN */
 
+.admin-link {
+    font-weight: bold;
+    color: #e67e22;
+}
+.admin-link:hover {
+    text-decoration: underline;
+}
 
